src/objects/Sensis_Search__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListingIDURL__c</fullName>
        <label>Listing ID URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ReportingURL__c</fullName>
        <label>ReportingURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ResultsPerPage__c</fullName>
        <label>ResultsPerPage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Sensis Search</label>
</CustomObject>